# OpenBullet

./: .env.example  README.md  pyproject.toml
src/openbullet/: __init__.py  cli.py  config.py
src/openbullet/app/: main.py
src/openbullet/providers/: akshare.py  dividends.py  ev_fcf.py  prices.py  roic.py
src/openbullet/routers/: cn_market.py  dividends.py  ev_fcf.py  meta.py  roic.py
src/openbullet/widgets/: __init__.py  registry.py
