[project]
name = "openbullet"
version = "0.1.0"
description = "OpenBB Workspace backend for market data."
readme = "README.md"
authors = [
    { name = "zhenho", email = "zhenhaoyuan326@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.17.0",
    "fastapi>=0.115.0",
    "pandas>=2.2.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
openbullet = "openbullet.cli:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
